# transactions_analyzer

./: .gitignore  Makefile  docker-compose.yml  mkdocs.yml  pyproject.toml  run.py
docker/: Dockerfile  entrypoint.sh
docs/: README.md  docs.py  index.md  mkdocs.yml  swagger_ui.yml  transactions_analyzer.json
tests/: conftest.py
tests/app/: test_app.py
tests/database/: test_database.py
tests/resources/test_email/: test_email_manager.py
tests/resources/test_password/: test_password.py
tests/resources/test_token/: test_token.py
tests/transaction/: test_transaction.py  test_transaction_log.py
tests/user/: test_user.py
transaction_analyzer/: app.py  run.py
transaction_analyzer/configuration/: configuration.py
transaction_analyzer/database/: database.py
transaction_analyzer/error/: error.py
transaction_analyzer/modules/home/: home.py
transaction_analyzer/modules/home/templates/: dashboards.html  home.html
transaction_analyzer/modules/root/: root.py
transaction_analyzer/modules/transaction/: transaction.py
transaction_analyzer/modules/transaction/controllers/: transaction_controller.py  transaction_log_controller.py
transaction_analyzer/modules/users/: user.py
transaction_analyzer/resources/: resources.py
transaction_analyzer/resources/css/: preloader.css
transaction_analyzer/tests/: conftest.py
transaction_analyzer/tests/app/: test_app.py
transaction_analyzer/tests/database/: test_database.py
transaction_analyzer/tests/transaction/: test_transaction.py  test_transaction_log.py
transaction_analyzer/tests/user/: test_user.py
(+127 files in other folders)
